# CI_Quarto_project

./: README.md  main.py  pyproject.toml  utils.py
actors/: minmax3.py  reinforcement_bases_players.py  results.txt  rule_based_players.py
quarto/: README.md  __init__.py  objects.py
